--- a/templates/weight_converter.html
+++ b/templates/weight_converter.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
     <h1>Let's convert it!</h1>
-    <form method="POST" action="{% url 'weight_converter' %}">
+    <form action="" method="post">
         {% csrf_token %}
-        <p><input name = "value_in_g">&nbsp input value in grams</p>
-        <p><button type="submit">Calculate</button></p>
-        <p>Converted result of {{initial_value}} g is:&nbsp{{result}}kg</p>
+        {{ form }}
+        <input type="submit" value="initial_value" />
+        <p>initial value: {{initial_value}} result: {{result}}</p>
     </form>
-</div>
-{% endblock %}
+{% endblock content%}
