--- a/templates/weight_converter.html
+++ b/templates/weight_converter.html
@@ -7,6 +7,8 @@
         {{ form }}
         <input type="submit" value="convert" />
         <p>initial value: {{initial_value}} grams<br>
-            result: {{result}} kg</p>
+            result: {{result}} kg<br>
+            message (if something wrong): {{message}}
+        </p>
     </form>
 {% endblock content%}
