--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,12 @@
     <title>WEIGHT CONVERTER</title>
 </head>
 <body>
+<header>
+    <h3><a href="{% url 'weight_converter' %}">Weight Converter (g->kg)</a></h3>
+</header>
+<div>
 {% block content %}
 {% endblock %}
+</div>
 </body>
 </html>
