converter selection has been added

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WEIGHT CONVERTER</title>
+    <title>CONVERTER</title>
 </head>
 <body>
 <header>
-    <h3><a href="{% url 'weight_converter' %}">Weight Converter (g->kg)</a></h3>
+    <h3><a href="{% url 'converter' %}">Select and start Converter</a></h3>
 </header>
 <div>
 {% block content %}
